# DevilutionRS

./: Cargo.toml  LICENSE.md  README.md
game/: Cargo.toml
game/src/: anim.rs  lib.rs  main.rs  msg.rs
game/src/file/: font.rs  image.rs  mod.rs
game/src/screen/: mod.rs  title.rs  town.rs
gfx/: Cargo.toml
gfx/src/: batch.rs  lib.rs  material.rs  util.rs
gfx/src/gpu/: buffer.rs  mod.rs  pipeline.rs  texture.rs  types.rs
gfx/src/shaders/: basic.vert  color.frag  textured_array.frag
mpq/: Cargo.toml
mpq/src/: archive.rs  compression.rs  crypto.rs  header.rs  lib.rs
src/: init.rs  lib.rs  main.rs
src/game/: anim.rs  mod.rs  msg.rs  screen.rs  title_screen.rs
src/game/file/: font.rs  image.rs
src/game/screen/: mod.rs  title.rs  town.rs
src/game/screens/: title.rs
src/gfx/: batch.rs  font.rs  gpu.rs  image.rs  material.rs  mod.rs  util.rs
src/gfx/gpu/: buffer.rs  mod.rs  pipeline.rs  texture.rs  types.rs
src/gfx/shaders/: basic.vert  color.frag  textured.frag
src/mpq/: archive.rs  compression.rs  crypto.rs  header.rs  mod.rs
