[package]
name = "diablo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"

gl = "0.14"
glfw = "0.49"

pcx = "0.2"

cgmath = "0.18.0"

bitflags = "1.3"
byteorder = "1"
memoffset = "0.8"

explode = "0.1"
