[package]
name = "mpq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# BitFlags for bit-flag enums
bitflags = "1.3"
# ByteOrder library for parsing byte-level file structures
byteorder = "1"
# Explode library for access to the PKWARE (de)compression algorithm
explode = "0.1"
